#########################################
##### Defaults & Paths #####

AUTOMAKE_OPTIONS = foreign

# default doc location is $(prefix)/doc/pd,
# but we want $(prefix)/lib/pd/doc
libpddir = $(pkglibdir)/doc

# location to pd header
M_PD=$(top_srcdir)/src/m_pd.h

#########################################
##### Files, Binaries, & Libs #####

# empty var for data list footer
empty=

# this is at the end because its loooong
# these files go into libpddir defined above
# to regenerate:
# cd doc
# find . -type f -not -path "./Makefile*" | sort | awk '{print "    ", $1, "\\"}'; echo '     $(empty)'
nobase_dist_libpd_DATA = \
     ./1.manual/resources/favicon.ico \
     ./1.manual/resources/pdmanual.css \
     ./1.manual/resources/icon.png \
     ./1.manual/resources/1.2.1.png \
     ./1.manual/resources/1.2.2.png \
     ./1.manual/resources/1.2.3.png \
     ./1.manual/resources/2.1.1.png \
     ./1.manual/resources/2.1.10.png \
     ./1.manual/resources/2.1.11.png \
     ./1.manual/resources/2.1.12.png \
     ./1.manual/resources/2.1.13.png \
     ./1.manual/resources/2.1.14.png \
     ./1.manual/resources/2.1.2.png \
     ./1.manual/resources/2.1.3.png \
     ./1.manual/resources/2.1.4.png \
     ./1.manual/resources/2.1.5.png \
     ./1.manual/resources/2.1.6.png \
     ./1.manual/resources/2.1.7.png \
     ./1.manual/resources/2.1.8.png \
     ./1.manual/resources/2.1.9.png \
     ./1.manual/resources/2.10.1.png \
     ./1.manual/resources/2.10.2.png \
     ./1.manual/resources/2.10.3.png \
     ./1.manual/resources/2.10.4.png \
     ./1.manual/resources/2.10.5.png \
     ./1.manual/resources/2.10.6.png \
     ./1.manual/resources/2.11.1.png \
     ./1.manual/resources/2.2.1.png \
     ./1.manual/resources/2.2.10.png \
     ./1.manual/resources/2.2.2.png \
     ./1.manual/resources/2.2.3.png \
     ./1.manual/resources/2.2.4.png \
     ./1.manual/resources/2.2.5.png \
     ./1.manual/resources/2.2.6.png \
     ./1.manual/resources/2.2.7.png \
     ./1.manual/resources/2.2.8.png \
     ./1.manual/resources/2.2.9.png \
     ./1.manual/resources/2.3.1.png \
     ./1.manual/resources/2.3.10.png \
     ./1.manual/resources/2.3.11.png \
     ./1.manual/resources/2.3.12.png \
     ./1.manual/resources/2.3.13.png \
     ./1.manual/resources/2.3.14.png \
     ./1.manual/resources/2.3.15.png \
     ./1.manual/resources/2.3.16.png \
     ./1.manual/resources/2.3.17.png \
     ./1.manual/resources/2.3.18.png \
     ./1.manual/resources/2.3.19.png \
     ./1.manual/resources/2.3.2.png \
     ./1.manual/resources/2.3.20.png \
     ./1.manual/resources/2.3.21.png \
     ./1.manual/resources/2.3.22.png \
     ./1.manual/resources/2.3.23.png \
     ./1.manual/resources/2.3.24.png \
     ./1.manual/resources/2.3.25.png \
     ./1.manual/resources/2.3.26.png \
     ./1.manual/resources/2.3.27.png \
     ./1.manual/resources/2.3.3.png \
     ./1.manual/resources/2.3.4.png \
     ./1.manual/resources/2.3.5.png \
     ./1.manual/resources/2.3.6.png \
     ./1.manual/resources/2.3.7.png \
     ./1.manual/resources/2.3.8.png \
     ./1.manual/resources/2.3.9.png \
     ./1.manual/resources/2.4.1.png \
     ./1.manual/resources/2.4.10.png \
     ./1.manual/resources/2.4.11.png \
     ./1.manual/resources/2.4.12.png \
     ./1.manual/resources/2.4.13.png \
     ./1.manual/resources/2.4.14.png \
     ./1.manual/resources/2.4.15.png \
     ./1.manual/resources/2.4.16.png \
     ./1.manual/resources/2.4.2.png \
     ./1.manual/resources/2.4.3.png \
     ./1.manual/resources/2.4.4.png \
     ./1.manual/resources/2.4.5.png \
     ./1.manual/resources/2.4.6.png \
     ./1.manual/resources/2.4.7.png \
     ./1.manual/resources/2.4.8.png \
     ./1.manual/resources/2.4.9.png \
     ./1.manual/resources/2.5.1.png \
     ./1.manual/resources/2.6.1.png \
     ./1.manual/resources/2.8.1.png \
     ./1.manual/resources/2.8.2.png \
     ./1.manual/resources/2.8.3.png \
     ./1.manual/resources/2.8.4.png \
     ./1.manual/resources/2.8.5.png \
     ./1.manual/resources/2.8.6.png \
     ./1.manual/resources/2.9.1.png \
     ./1.manual/resources/2.9.2.png \
     ./1.manual/resources/2.9.3.png \
     ./1.manual/resources/2.9.4.png \
     ./1.manual/resources/2.9.5.png \
     ./1.manual/resources/2.9.6.png \
     ./1.manual/resources/3.3.1.png \
     ./1.manual/resources/3.3.2.png \
     ./1.manual/resources/3.3.3.png \
     ./1.manual/resources/3.3.4.png \
     ./1.manual/resources/3.3.5.png \
     ./1.manual/resources/3.3.6.png \
     ./1.manual/resources/3.4.1.png \
     ./1.manual/resources/3.4.2.png \
     ./1.manual/resources/3.4.3.png \
     ./1.manual/resources/4.1.1.png \
     ./1.manual/resources/4.3.1.png \
     ./1.manual/resources/4.3.2.png \
     ./1.manual/resources/4.3.3.png \
     ./1.manual/resources/4.3.4.png \
     ./1.manual/resources/4.3.5.png \
     ./1.manual/resources/4.3.6.png \
     ./1.manual/resources/4.4.1.png \
     ./1.manual/resources/4.4.2.png \
     ./1.manual/resources/4.4.3.png \
     ./1.manual/index.htm \
     ./1.manual/resources/chapter1.htm \
     ./1.manual/resources/chapter2.htm \
     ./1.manual/resources/chapter3.htm \
     ./1.manual/resources/chapter4.htm \
     ./1.manual/resources/chapter5.htm \
     ./1.manual/resources/chapter6.htm \
     ./2.control.examples/00.INTRO.txt \
     ./2.control.examples/01.PART1.hello.pd \
     ./2.control.examples/02.editing.pd \
     ./2.control.examples/03.connections.pd \
     ./2.control.examples/04.messages.pd \
     ./2.control.examples/05.counter.pd \
     ./2.control.examples/06.more.counters.pd \
     ./2.control.examples/07.time.pd \
     ./2.control.examples/08.depthfirst.pd \
     ./2.control.examples/09.send_receive.pd \
     ./2.control.examples/10.more.messages.pd \
     ./2.control.examples/11.review.pd \
     ./2.control.examples/12.PART2.subpatch.pd \
     ./2.control.examples/13.locality.pd \
     ./2.control.examples/14.dollarsigns.pd \
     ./2.control.examples/15.array.pd \
     ./2.control.examples/15.file.txt \
     ./2.control.examples/16.more.arrays.pd \
     ./2.control.examples/17.PART3.midi.pd \
     ./2.control.examples/18.conditional.pd \
     ./2.control.examples/19.random.pd \
     ./2.control.examples/20.weighted-random.pd \
     ./2.control.examples/21.markov.chain.pd \
     ./2.control.examples/22.random-walk.pd \
     ./2.control.examples/23.sequencing.pd \
     ./2.control.examples/24.loops.pd \
     ./2.control.examples/dollarsign.pd \
     ./2.control.examples/dollarsign2.pd \
     ./2.control.examples/gop-abs.pd \
     ./2.control.examples/sendnumber.pd \
     ./3.audio.examples/A00.intro.pd \
     ./3.audio.examples/A01.sinewave.pd \
     ./3.audio.examples/A02.amplitude.pd \
     ./3.audio.examples/A03.line.pd \
     ./3.audio.examples/A04.line2.pd \
     ./3.audio.examples/A05.output.subpatch.pd \
     ./3.audio.examples/A06.frequency.pd \
     ./3.audio.examples/A07.fusion.pd \
     ./3.audio.examples/A08.beating.pd \
     ./3.audio.examples/A09.frequency.mod.pd \
     ./3.audio.examples/A10.review.pd \
     ./3.audio.examples/B01.wavetables.pd \
     ./3.audio.examples/B02.two-wavetables.pd \
     ./3.audio.examples/B03.tabread4~.pd \
     ./3.audio.examples/B04.tabread4.interpolation.pd \
     ./3.audio.examples/B05.tabread.FM.pd \
     ./3.audio.examples/B06.table.switching.pd \
     ./3.audio.examples/B07.sampler.scratch.pd \
     ./3.audio.examples/B08.sampler.loop.pd \
     ./3.audio.examples/B09.sampler.loop.smooth.pd \
     ./3.audio.examples/B10.sampler.sliding.loop.pd \
     ./3.audio.examples/B11.sampler.nodoppler.pd \
     ./3.audio.examples/B12.sampler.transpose.pd \
     ./3.audio.examples/B13.sampler.overlap.pd \
     ./3.audio.examples/B14.sampler.rockafella.pd \
     ./3.audio.examples/B15.tabread4~-onset.pd \
     ./3.audio.examples/B16.long-varispeed.pd \
     ./3.audio.examples/C01.nyquist.pd \
     ./3.audio.examples/C02.sawtooth-foldover.pd \
     ./3.audio.examples/C03.zipper.noise.pd \
     ./3.audio.examples/C04.control.to.signal.pd \
     ./3.audio.examples/C05.sampler.oneshot.pd \
     ./3.audio.examples/C06.signal.to.control.pd \
     ./3.audio.examples/C07.envelope.follower.pd \
     ./3.audio.examples/C08.analog.sequencer.pd \
     ./3.audio.examples/C09.sample.hold.pd \
     ./3.audio.examples/C10.monophonic.synth.pd \
     ./3.audio.examples/D01.envelope.gen.pd \
     ./3.audio.examples/D02.adsr.pd \
     ./3.audio.examples/D03.envelope.dB.pd \
     ./3.audio.examples/D04.envelope.quartic.pd \
     ./3.audio.examples/D05.envelope.pitch.pd \
     ./3.audio.examples/D06.envelope.portamento.pd \
     ./3.audio.examples/D07.additive.pd \
     ./3.audio.examples/D08.table.spectrum.pd \
     ./3.audio.examples/D09.shepard.tone.pd \
     ./3.audio.examples/D10.sampler.notes.pd \
     ./3.audio.examples/D11.sampler.poly.pd \
     ./3.audio.examples/D12.sampler.bis.pd \
     ./3.audio.examples/D13.additive.qlist.pd \
     ./3.audio.examples/D14.vibrato.pd \
     ./3.audio.examples/E01.spectrum.pd \
     ./3.audio.examples/E02.ring.modulation.pd \
     ./3.audio.examples/E03.octave.divider.pd \
     ./3.audio.examples/E04.difference.tone.pd \
     ./3.audio.examples/E05.chebyshev.pd \
     ./3.audio.examples/E06.exponential.pd \
     ./3.audio.examples/E07.evenodd.pd \
     ./3.audio.examples/E08.phase.mod.pd \
     ./3.audio.examples/E09.FM.spectrum.pd \
     ./3.audio.examples/E10.complex.FM.pd \
     ./3.audio.examples/F01.pulse.pd \
     ./3.audio.examples/F02.just.say.pd \
     ./3.audio.examples/F03.pulse.spectrum.pd \
     ./3.audio.examples/F04.waveshaping.pulse.pd \
     ./3.audio.examples/F05.ring.modulation.pd \
     ./3.audio.examples/F06.packets.pd \
     ./3.audio.examples/F07.packet.spectrum.pd \
     ./3.audio.examples/F08.two.cosines.pd \
     ./3.audio.examples/F09.declickit.pd \
     ./3.audio.examples/F10.sweepable.FM.pd \
     ./3.audio.examples/F11.anharmonic.FM.pd \
     ./3.audio.examples/F12.paf.pd \
     ./3.audio.examples/F13.paf.control.pd \
     ./3.audio.examples/F14.wave.packet.pd \
     ./3.audio.examples/G01.delay.pd \
     ./3.audio.examples/G02.delay.loop.pd \
     ./3.audio.examples/G03.delay.variable.pd \
     ./3.audio.examples/G04.control.blocksize.pd \
     ./3.audio.examples/G05.execution.order.pd \
     ./3.audio.examples/G06.octave.doubler.pd \
     ./3.audio.examples/G07.shaker.pd \
     ./3.audio.examples/G08.reverb.pd \
     ./3.audio.examples/G09.pitchshift.pd \
     ./3.audio.examples/H01.low-pass.pd \
     ./3.audio.examples/H02.high-pass.pd \
     ./3.audio.examples/H03.band-pass.pd \
     ./3.audio.examples/H04.filter.sweep.pd \
     ./3.audio.examples/H05.filter.floyd.pd \
     ./3.audio.examples/H06.envelope.follower.pd \
     ./3.audio.examples/H07.measure.spectrum.pd \
     ./3.audio.examples/H08.heterodyning.pd \
     ./3.audio.examples/H09.ssb.modulation.pd \
     ./3.audio.examples/H10.measurement.pd \
     ./3.audio.examples/H11.shelving.pd \
     ./3.audio.examples/H12.peaking.pd \
     ./3.audio.examples/H13.butterworth.pd \
     ./3.audio.examples/H14.all.pass.pd \
     ./3.audio.examples/H15.phaser.pd \
     ./3.audio.examples/H16.adsr.filter.text.pd \
     ./3.audio.examples/I01.Fourier.analysis.pd \
     ./3.audio.examples/I02.Hann.window.pd \
     ./3.audio.examples/I03.resynthesis.pd \
     ./3.audio.examples/I04.noisegate.pd \
     ./3.audio.examples/I05.compressor.pd \
     ./3.audio.examples/I06.timbre.stamp.pd \
     ./3.audio.examples/I07.phase.vocoder.pd \
     ./3.audio.examples/I08.pvoc.reverb.pd \
     ./3.audio.examples/I09.sheep.from.goats.pd \
     ./3.audio.examples/I10.phase.bash.pd \
     ./3.audio.examples/J01.even.odd.pd \
     ./3.audio.examples/J02.trapezoids.pd \
     ./3.audio.examples/J03.pulse.width.mod.pd \
     ./3.audio.examples/J04.corners.pd \
     ./3.audio.examples/J05.triangle.pd \
     ./3.audio.examples/J06.enveloping.pd \
     ./3.audio.examples/J07.oversampling.pd \
     ./3.audio.examples/J08.classicsynth.pd \
     ./3.audio.examples/J09.bandlimited.pd \
     ./3.audio.examples/adsr.pd \
     ./3.audio.examples/buttercoef3.pd \
     ./3.audio.examples/butterworth3~.pd \
     ./3.audio.examples/filter-graph1.pd \
     ./3.audio.examples/filter-graph2.pd \
     ./3.audio.examples/osc-voice.pd \
     ./3.audio.examples/partial.pd \
     ./3.audio.examples/qlist-sampler.txt \
     ./3.audio.examples/qlist.txt \
     ./3.audio.examples/reverb-echo.pd \
     ./3.audio.examples/sampvoice.pd \
     ./3.audio.examples/sampvoice2.pd \
     ./3.audio.examples/shepvoice.pd \
     ./3.audio.examples/spectrum-partial.pd \
     ./4.data.structures/01.scalars.pd \
     ./4.data.structures/02.getting.data.pd \
     ./4.data.structures/03.setting.data.pd \
     ./4.data.structures/04.append.pd \
     ./4.data.structures/05.symbol.text.pd \
     ./4.data.structures/06.array.pd \
     ./4.data.structures/07.graph.on.parent.pd \
     ./4.data.structures/08.file.pd \
     ./4.data.structures/09.sequencer.pd \
     ./4.data.structures/10.interaction.pd \
     ./4.data.structures/11.scaling.pd \
     ./4.data.structures/12.onoff.pd \
     ./4.data.structures/13.array.controls.pd \
     ./4.data.structures/14.beat-patterns.pd \
     ./4.data.structures/15.sliderule.pd \
     ./4.data.structures/16.FFT-plot.pd \
     ./4.data.structures/17.partialtracer.pd \
     ./4.data.structures/18.scope2d.pd \
     ./4.data.structures/add-trace.pd \
     ./4.data.structures/beat-maker.pd \
     ./4.data.structures/data-array.pd \
     ./4.data.structures/file.txt \
     ./4.data.structures/osc-voice.pd \
     ./4.data.structures/voice.pd \
     ./5.reference/acoustics-help.pd \
     ./5.reference/acoustics-tilde-help.pd \
     ./5.reference/adc~_dac~-help.pd \
     ./5.reference/all_guis.pd \
     ./5.reference/append-help.pd \
     ./5.reference/array-object-help.pd \
     ./5.reference/array-object-help.txt \
     ./5.reference/bag-help.pd \
     ./5.reference/bang-help.pd \
     ./5.reference/bang~-help.pd \
     ./5.reference/binops-help.pd \
     ./5.reference/binops-other-help.pd \
     ./5.reference/binops-tilde-help.pd \
     ./5.reference/biquad~-help.pd \
     ./5.reference/block~-help.pd \
     ./5.reference/bng-help.pd \
     ./5.reference/bp~-help.pd \
     ./5.reference/canvas-help.pd \
     ./5.reference/change-help.pd \
     ./5.reference/clip-help.pd \
     ./5.reference/clip~-help.pd \
     ./5.reference/clone-abs-a.pd \
     ./5.reference/clone-abs-b.pd \
     ./5.reference/clone-abs-c.pd \
     ./5.reference/clone-help.pd \
     ./5.reference/cnv-help.pd \
     ./5.reference/cos~-help.pd \
     ./5.reference/cpole~-help.pd \
     ./5.reference/cputime-help.pd \
     ./5.reference/czero_rev~-help.pd \
     ./5.reference/czero~-help.pd \
     ./5.reference/declare-help.pd \
     ./5.reference/delay-help.pd \
     ./5.reference/delay-tilde-objects-help.pd \
     ./5.reference/draw-shapes-help.pd \
     ./5.reference/drawtext-help.pd \
     ./5.reference/ds-text.txt \
     ./5.reference/element-help.pd \
     ./5.reference/env~-help.pd \
     ./5.reference/expr-help.pd \
     ./5.reference/fft~-help.pd \
     ./5.reference/file-help.pd \
     ./5.reference/float-help.pd \
     ./5.reference/framp~-help.pd \
     ./5.reference/fudi-format-parse-help.pd \
     ./5.reference/get-help.pd \
     ./5.reference/getsize-help.pd \
     ./5.reference/gui-boxes-help.pd \
     ./5.reference/help-intro.pd \
     ./5.reference/hip~-help.pd \
     ./5.reference/inlet-outlet-help.pd \
     ./5.reference/int-help.pd \
     ./5.reference/key-input-help.pd \
     ./5.reference/line-help.pd \
     ./5.reference/line~-help.pd \
     ./5.reference/list-help.pd \
     ./5.reference/loadbang-help.pd \
     ./5.reference/lop~-help.pd \
     ./5.reference/makefilename-help.pd \
     ./5.reference/makenote-help.pd \
     ./5.reference/message-help.pd \
     ./5.reference/metro-help.pd \
     ./5.reference/midi-help.pd \
     ./5.reference/moses-help.pd \
     ./5.reference/namecanvas-help.pd \
     ./5.reference/nbx-help.pd \
     ./5.reference/netsend-receive-help.pd \
     ./5.reference/noise~-help.pd \
     ./5.reference/openpanel-help.pd \
     ./5.reference/osc-format-parse-help.pd \
     ./5.reference/osc~-help.pd \
     ./5.reference/pack-help.pd \
     ./5.reference/pd-messages.pd \
     ./5.reference/pdcontrol-abs.pd \
     ./5.reference/pdcontrol-help.pd \
     ./5.reference/phasor~-help.pd \
     ./5.reference/pipe-help.pd \
     ./5.reference/plot-help.pd \
     ./5.reference/pointer-help.pd \
     ./5.reference/poly-help.pd \
     ./5.reference/print-help.pd \
     ./5.reference/print~-help.pd \
     ./5.reference/qlist-help.pd \
     ./5.reference/qlist.txt \
     ./5.reference/radio-help.pd \
     ./5.reference/random-help.pd \
     ./5.reference/readsf~-help.pd \
     ./5.reference/realtime-help.pd \
     ./5.reference/route-help.pd \
     ./5.reference/rpole~-help.pd \
     ./5.reference/rzero_rev~-help.pd \
     ./5.reference/rzero~-help.pd \
     ./5.reference/samphold~-help.pd \
     ./5.reference/samplerate~-help.pd \
     ./5.reference/savepanel-help.pd \
     ./5.reference/savestate-ex1.pd \
     ./5.reference/savestate-ex2.pd \
     ./5.reference/savestate-ex3.pd \
     ./5.reference/savestate-help.pd \
     ./5.reference/scalar-object-help.pd \
     ./5.reference/select-help.pd \
     ./5.reference/send-receive-help.pd \
     ./5.reference/send-receive-tilde-help.pd \
     ./5.reference/set-dsp-tgl.pd \
     ./5.reference/set-help.pd \
     ./5.reference/setsize-help.pd \
     ./5.reference/setsize.txt \
     ./5.reference/sig~-help.pd \
     ./5.reference/sliders-help.pd \
     ./5.reference/slop~-help.pd \
     ./5.reference/snake-tilde-help.pd \
     ./5.reference/snapshot~-help.pd \
     ./5.reference/soundfiler-help.pd \
     ./5.reference/spigot-help.pd \
     ./5.reference/stripnote-help.pd \
     ./5.reference/struct-help.pd \
     ./5.reference/swap-help.pd \
     ./5.reference/symbol-help.pd \
     ./5.reference/table.txt \
     ./5.reference/tabosc4~-help.pd \
     ./5.reference/tabplay~-help.pd \
     ./5.reference/tabread-help.pd \
     ./5.reference/tabread4-help.pd \
     ./5.reference/tabread4~-help.pd \
     ./5.reference/tabread~-help.pd \
     ./5.reference/tabsend-receive~-help.pd \
     ./5.reference/tabwrite-help.pd \
     ./5.reference/tabwrite~-help.pd \
     ./5.reference/text-help.pd \
     ./5.reference/text-object-help.pd \
     ./5.reference/text-object-help.txt \
     ./5.reference/textfile-help.pd \
     ./5.reference/textfile.txt \
     ./5.reference/threshold~-help.pd \
     ./5.reference/throw~-catch~-help.pd \
     ./5.reference/timer-help.pd \
     ./5.reference/toggle-help.pd \
     ./5.reference/trace-help.pd \
     ./5.reference/trigger-help.pd \
     ./5.reference/trigonometric-help.pd \
     ./5.reference/unops-help.pd \
     ./5.reference/unops-tilde-help.pd \
     ./5.reference/unpack-help.pd \
     ./5.reference/until-help.pd \
     ./5.reference/value-help.pd \
     ./5.reference/vcf~-help.pd \
     ./5.reference/vline~-help.pd \
     ./5.reference/vsnapshot~-help.pd \
     ./5.reference/vu-help.pd \
     ./5.reference/writesf~-help.pd \
     ./6.externs/0.README.txt \
     ./6.externs/dspobj~.c \
     ./6.externs/makefile \
     ./6.externs/obj1.c \
     ./6.externs/obj2.c \
     ./6.externs/obj3.c \
     ./6.externs/obj4.c \
     ./6.externs/obj5.c \
     ./6.externs/test-dspobj~.pd \
     ./6.externs/test-obj1.pd \
     ./6.externs/test-obj2.pd \
     ./6.externs/test-obj3.pd \
     ./6.externs/test-obj4.pd \
     ./6.externs/test-obj5.pd \
     ./7.stuff/soundfile-tools/1.ring-mod.pd \
     ./7.stuff/soundfile-tools/2.band-pass.pd \
     ./7.stuff/soundfile-tools/3.phase-vocoder.pd \
     ./7.stuff/soundfile-tools/4.looper.pd \
     ./7.stuff/soundfile-tools/5.reverb.pd \
     ./7.stuff/soundfile-tools/6.vocoder.pd \
     ./7.stuff/soundfile-tools/README.txt \
     ./7.stuff/synth/1.poly.synth.pd \
     ./7.stuff/synth/README.txt \
     ./7.stuff/synth/gadsr.pd \
     ./7.stuff/synth/numset.pd \
     ./7.stuff/synth/preset.pd \
     ./7.stuff/synth/preset1.txt \
     ./7.stuff/synth/preset2.txt \
     ./7.stuff/synth/preset3.txt \
     ./7.stuff/synth/preset4.txt \
     ./7.stuff/synth/synthvoice.pd \
     ./7.stuff/tools/latency.pd \
     ./7.stuff/tools/load-meter.pd \
     ./7.stuff/tools/miditester.pd \
     ./7.stuff/tools/sizingtest.pd \
     ./7.stuff/tools/testtone.pd \
     ./8.topics/compander-limiter.htm \
     ./8.topics/expr.htm \
     ./8.topics/fudi.htm \
     ./8.topics/slop-compander-patch.png \
     ./8.topics/slop-peak-meter-graph.png \
     ./8.topics/slop-peak-meter-patch.png \
     ./8.topics/slop-slew-limit.png \
     ./8.topics/slop-slew-limiting-patch.png \
     ./8.topics/slop-tilde-1-curves.png \
     ./8.topics/slop-tilde.htm \
     ./sound/bell.aiff \
     ./sound/voice.wav \
     ./sound/voice2.wav \
     $(empty)
