#########################################
##### Files, Binaries, & Libs #####

EXTRA_DIST = \
	$(fontdata_DATA) \
	$(empty)

fontdatadir = $(pkgdatadir)/font
fontdata_DATA =

# files that are included but not built
fontdata_DATA += \
    DejaVuSansMono.ttf \
    DejaVuSansMono-Oblique.ttf \
    DejaVuSansMono-Bold.ttf \
    DejaVuSansMono-BoldOblique.ttf \
    $(data)

fontdata_DATA += \
    LICENSE \
    README.txt \
    $(data)
